--- a/eprontosite/templates/eprontosite/index.html
+++ b/eprontosite/templates/eprontosite/index.html
@@ -1,1 +1,65 @@
-Olá mundo
+{% load static %}
+<!doctype html>
+<html lang="pt-br" class="h-100">
+
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>e-pronT.O.</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static 'eprontosite/style.css' %}" />
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous">
+    </script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
+    </script>
+</head>
+
+<body>
+    <div class="jumbotron">
+        <div class="container text-center text-white ctindex">
+            <div class="row">
+                <div class="col-md">
+                    <h1 class="display-4"><strong>e-pronT.O.</strong></h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md">
+                    <p class="lead"><strong>Sistema de prontuário eletrônico feito especialmente para clínicas de
+                            Terapia Ocupacional</strong></p>
+                </div>
+            </div>
+            <div class="row mt-5">
+                <div class="col-md">
+                    <p class="lead"><a class="btn btn-index btn-lg" href="">Entrar</a>
+                </div>
+            </div>
+
+        </div>
+    </div>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md">
+                <h2>Paciente</h2>
+                <p>Tenha um cadastro completo do seu paciente e responsáveis com agenda para o acompanhamento das
+                    consultas</p>
+            </div>
+            <div class="col-md">
+                <h2>Metas</h2>
+                <p>Defina metas a serem cumpridas e acompanhe o desenvolvimento das consultas</p>
+            </div>
+            <div class="col-md">
+                <h2>Acompanhamento</h2>
+                <p>Inclua fotos e vídeos para manter um histórico de desenvolvimento desde a primeira consulta</p>
+            </div>
+        </div>
+    </div>
+</body>
+
+</html>
