--- a/eprontosite/templates/eprontosite/index.html
+++ b/eprontosite/templates/eprontosite/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="row mt-5">
                 <div class="col-md">
-                    <p class="lead"><a class="btn btn-index btn-lg" href="">Entrar</a>
+                    <p class="lead"><a class="btn btn-index btn-lg" href="epronto/">Entrar</a>
                 </div>
             </div>
 
