Dashboard base started

--- a/eprontosite/templates/eprontosite/dashboard.html
+++ b/eprontosite/templates/eprontosite/dashboard.html
@@ -1,1 +1,13 @@
-FF
+{% extends 'eprontosite/dashboard_base.html' %} 
+{% block content %}
+<div class="right_col" role="main">
+        <div class="">
+          <div class="page-title">
+            <div class="Title_center">
+              <h1>Página Principal</h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      
+{% endblock %}
