--- a/eprontosite/templates/eprontosite/dashboard_base.html
+++ b/eprontosite/templates/eprontosite/dashboard_base.html
@@ -25,7 +25,7 @@
                 <div class="left_col scroll-view">
                     <!-- Titulo navbar -->
                     <div class="navbar nav_title" style="border: 0;">
-                        <a href="index.html" class="site_title"><i class="fa fa-heartbeat"></i>
+                        <a href="{% url 'dashboard_home' %}" class="site_title"><i class="fa fa-heartbeat"></i>
                             <span>e-pronT.O.</span></a>
                     </div>
                     <div class="clearfix"></div>
@@ -36,8 +36,8 @@
                                 class="img-circle profile_img">
                         </div>
                         <div class="profile_info">
-                            <span>Welcome,</span>
-                            <h2>John Doe</h2>
+                            <span>Bem Vindo,</span>
+                            <h2>{{user.get_full_name}}</h2>
                         </div>
                     </div>
                     <!-- /menu profile quick info -->
@@ -47,8 +47,8 @@
                         <div class="menu_section">
                             <h3>Geral</h3>
                             <ul class="nav side-menu">
-                                <li><a href=""><i class="fa fa-home"></i>Início</a></li>
-                                <li><a href=""><i class="fa fa-user"></i>Seu Perfil</a></li>
+                                <li><a href="{% url 'dashboard_home' %}"><i class="fa fa-home"></i>Início</a></li>
+                                <li><a href="{% url 'perfil' %}"><i class="fa fa-user"></i>Seu Perfil</a></li>
 
                             </ul>
                         </div>
@@ -82,11 +82,12 @@
                             <li class="nav-item dropdown open" style="padding-left: 15px;">
                                 <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true"
                                     id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                                    <img src="{% static 'eprontosite/images/defaultuser.jpg' %}" alt="">John Doe
+                                    <img src="{% static 'eprontosite/images/defaultuser.jpg' %}"
+                                        alt="">{{user.get_full_name}}
                                 </a>
                                 <div class="dropdown-menu dropdown-usermenu pull-right"
                                     aria-labelledby="navbarDropdown">
-                                    <a class="dropdown-item" href="javascript:;"> Profile</a>
+                                    <a class="dropdown-item" href="{% url 'perfil' %}"> Perfil</a>
                                     <a class="dropdown-item" href="javascript:;">
                                         <span class="badge bg-red pull-right">50%</span>
                                         <span>Settings</span>
@@ -172,7 +173,7 @@
                 </div>
             </div>
             <!-- /top navigation -->
-            
+
             <!-- page content -->
             {% block content %} {% endblock %}
             <!-- /page content -->
@@ -193,8 +194,13 @@
     </script>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/23212de6c5.js" crossorigin="anonymous"></script>
+    <!-- JQuery input mask -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.js"
+        integrity="sha256-yE5LLp5HSQ/z+hJeCqkz9hdjNkk1jaiGG0tDCraumnA=" crossorigin="anonymous"></script>
     <!-- Custom Theme javascript -->
     <script src="{% static 'eprontosite/theme/custom.js' %}"></script>
+    <!-- custom scripts -->
+    {% block scripts %} {% endblock %}
 </body>
 
 </html>
