--- a/eprontosite/templates/eprontosite/perfil.html
+++ b/eprontosite/templates/eprontosite/perfil.html
@@ -70,8 +70,8 @@
                                         class="required">*</span>
                                 </label>
                                 <div class="col-md-6 col-sm-6 ">
-                                    <input name="cpf" class="form-control cpf" type="text" value="{{usuario.profile.CPF}}"
-                                        required>
+                                    <input name="cpf" class="form-control cpf" type="text"
+                                        value="{{usuario.profile.CPF}}" required>
                                 </div>
                             </div>
                             <div class="item form-group">
@@ -90,6 +90,13 @@
                                 <div class="col-md-6 col-sm-6 ">
                                     <input id="tel-cel" name="tel-cel" class="form-control" type="text"
                                         value="{{usuario.profile.Telefone_Celular}}" required>
+                                </div>
+                            </div>
+                            <div class="item form-group">
+                                <label class="col-form-label col-md-3 col-sm-3 label-align">Imagem</label>
+                                <div class="custom-file col-md-6 col-sm-6 ">
+                                    <input type="file" class="custom-file-input" id="inputimage" lang="pt">
+                                    <label class="custom-file-label">Escolha o arquivo...</label>
                                 </div>
                             </div>
                             <div class="ln_solid"></div>
